sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var lgr=0
  var ecart=lgr
  var Inverse=true

  while (Inverse==true) {
      if (ecart>1) {
        ecart=ecart/1,3
      }
      var i=0

      while (i+ecart<lgr) {
        if (!plusPetit(i, i+ecart)) {
          echange(i, i+ecart)
        }
        i=i+1
      }
    }
  }
